[tool.poetry]
name = "dask_hpc"
version = "0.1.0"
description = "Dask configuration for HPC environments"
authors = []
readme = "README.md"
packages = [{include = "dask_hpc"}]

[tool.poetry.dependencies]
python = "^3.9"
dask = {version = "2025.1.0", extras = ["complete", "dataframe"]}
dask-jobqueue = "0.9.0"
bokeh = "3.6.3"
jupyter-bokeh = "4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pycodestyle]
max-line-length = "120"
